Backport to v6.4: Jackson 3 → Elemental JSON, Java 21 → 17, Vaadin 25 → 24.10
Phase 1-11 of v7.1 → v6.4 backport:
- All POMs: version 6.4.0-SNAPSHOT, Vaadin 24.10.0, Java 17, Spring Boot 3.5.0
- Complete migration from Jackson 3 (tools.jackson) to Elemental JSON (elemental.json)
- All Java 21 features converted to Java 17 compatible code:
  - instanceof pattern matching → explicit casts
  - switch expressions with type patterns → if-else chains
  - case null in switch → explicit null checks
- 80+ files migrated across addon/ and addon-scheduler/ modules
- All unit tests updated and passing

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>